# byte_file_io

./: CMakeLists.txt  README.md  if_optional.hpp  iobytes.hpp  main.cpp
src/: ifopt.hpp  iobytes.hpp  main.cpp
